--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
-  font-size: 18px; }
+  font-size: 18px;
+  background: #F7F9FB; }
   body h1 {
     font-size: 45px;
     font-weight: 600;
@@ -24,7 +25,7 @@ body {
     font-weight: 400; }
   body .button {
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
     color: #FFFFFF;
     background: #16264B;
     border-radius: 30px;
@@ -41,3 +42,18 @@ body {
   body .btn.focus {
     outline: 0;
     box-shadow: none; }
+  body .navbarButton {
+    background: #FFFFFF;
+    color: #333333; }
+
+#navBar .navbar-nav .nav-link {
+  padding: 0.5rem 1.5rem;
+  color: #000000;
+  font-weight: 500;
+  font-size: 18px;
+  text-transform: capitalize; }
+
+#navBar .navbar-brand {
+  color: #1C1C1C;
+  font-weight: 700;
+  font-size: 28px; }
