--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
-
+    background: #F7F9FB;
     h1 {
         font-size: 45px;
         font-weight: 600;
@@ -37,7 +37,7 @@ body {
 
     .button {
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 600;
         color: #FFFFFF;
         background: #16264B;
         border-radius: 30px;
@@ -58,5 +58,24 @@ body {
     .btn.focus {
         outline: 0;
         box-shadow: none;
+    }
+    .navbarButton{
+        background: #FFFFFF;
+        color: #333333;
+    }
+}
+
+#navBar{
+    .navbar-nav .nav-link{
+        padding: 0.5rem 1.5rem;
+        color: #000000;
+        font-weight: 500;
+        font-size: 18px;
+        text-transform: capitalize;
+    }
+    .navbar-brand{
+        color: #1C1C1C;
+        font-weight: 700;
+        font-size: 28px;
     }
 }
