--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,6 +63,9 @@ body {
         background: #FFFFFF;
         color: #333333;
     }
+    .navbarButton:hover{
+        color: #333333;
+    }
 }
 
 #navBar{
