--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,20 +5,44 @@
   
   /* =================== Large Screen ===================== */
   @media only screen and (max-width: 980px) {
-  
+   /* =========== Nav Bar =========== */
+   .navbar-nav .nav-link{
+    padding: 0.5rem 0 !important;
+}
+.navbar-brand{
+    color: #1C1C1C;
+    font-weight: 700;
+    font-size: 22px !important;
+}
   
   }
   
   /* =============Midium Devices ================= */
   
   @media only screen and (max-width: 768px) {
-  
+   /* =========== Nav Bar =========== */
+   .navbar-nav .nav-link{
+    padding: 0.5rem 0 !important;
+}
+.navbar-brand{
+    color: #1C1C1C;
+    font-weight: 700;
+    font-size: 18px !important;
+}
   }
   
   /* =============Small Devices ================= */
   
   @media only screen and (max-width: 480px) {
-
+ /* =========== Nav Bar =========== */
+ .navbar-nav .nav-link{
+    padding: 0.5rem 0 !important;
+}
+.navbar-brand{
+    color: #1C1C1C;
+    font-weight: 700;
+    font-size: 18px !important;
+}
   }
   
   
