--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,9 +3,10 @@ body {
   font-size: 18px;
   background: #F7F9FB; }
   body h1 {
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 600;
-    color: #000000; }
+    color: #000000;
+    line-height: 1.5; }
   body h2 {
     font-size: 35px;
     font-weight: 600;
@@ -20,6 +21,12 @@ body {
     font-weight: 400; }
   body .colorText {
     color: #46AAA8; }
+  body p {
+    font-size: 20px;
+    font-weight: 400;
+    color: #556575; }
+    body p img {
+      height: 20px !important; }
   body .smallText {
     font-size: 16px;
     font-weight: 400; }
@@ -59,3 +66,25 @@ body {
   color: #1C1C1C;
   font-weight: 700;
   font-size: 28px; }
+
+#banner .bannerLeft .banner-description {
+  color: #000000; }
+
+#banner .bannerLeft input {
+  width: 61%;
+  background: #FFFF;
+  border: 1px solid #E7E7E7;
+  padding: 27px; }
+  #banner .bannerLeft input ::placeholder {
+    color: #333333;
+    font-size: 19px;
+    font-weight: 300; }
+
+#banner .bannerLeft .bannerForm button {
+  width: 32%;
+  padding: 15px 0;
+  text-transform: uppercase;
+  background: #344B66;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 500; }
