Banner responsive 75% done

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -20,6 +20,12 @@
   /* =============Midium Devices ================= */
   
   @media only screen and (max-width: 768px) {
+      body h1{
+          font-size: 17px;
+      }
+      body p{
+          font-size: 14px;
+      }
    /* =========== Nav Bar =========== */
    .navbar-nav .nav-link{
     padding: 0.5rem 0 !important;
@@ -29,11 +35,38 @@
     font-weight: 700;
     font-size: 18px !important;
 }
+
+/* ===============Banners ================= */
+#banner .bannerLeft{
+    margin-left: 5rem;
+}
+#banner .bannerRight{
+    margin-left: 0;
+}
+#banner .bannerLeft .bannerForm button {
+    padding: 11px 0;
+    font-size: 11px;
+    width: 30%;
+}
+#banner .bannerLeft input {
+    padding: 21px;
+    width: 58%;
+}
+#banner .bannerLeft input::placeholder {
+    font-size: 14px;
+}
+
   }
   
   /* =============Small Devices ================= */
   
   @media only screen and (max-width: 480px) {
+    body p{
+        font-size: 15px;
+    }
+    body h1{
+        font-size: 28px;
+    }
  /* =========== Nav Bar =========== */
  .navbar-nav .nav-link{
     padding: 0.5rem 0 !important;
@@ -43,12 +76,36 @@
     font-weight: 700;
     font-size: 18px !important;
 }
+
+/* ===============Banner ================= */
+#banner .bannerLeft{
+    margin-left: 0;
+}
+#banner .bannerRight{
+    margin-left: 0;
+}
+#banner .bannerLeft .bannerForm button {
+    padding: 11px 0;
+    font-size: 11px;
+}
+#banner .bannerLeft input {
+    padding: 21px;
+}
+
+
   }
   
   
   /* ============= Extra Small Devices ================= */
   
   @media only screen and (max-width: 320px) {
+      body p{
+          font-size: 15px;
+      }
+      body h1{
+          font-size: 19px;
+      }
+
         /* =========== Nav Bar =========== */
         .navbar-nav .nav-link{
             padding: 0.5rem 0 !important;
@@ -57,5 +114,18 @@
             color: #1C1C1C;
             font-weight: 700;
             font-size: 18px !important;
+        }
+        #banner .bannerLeft{
+            margin-left: 0;
+        }
+        #banner .bannerRight{
+            margin-left: 0;
+        }
+        #banner .bannerLeft .bannerForm button {
+            padding: 11px 0;
+            font-size: 11px;
+        }
+        #banner .bannerLeft input {
+            padding: 21px;
         }
   }
