--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,19 +2,26 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     background: #F7F9FB;
+    .extraPadding{
+        padding: 0 5.25% 0 5.25%;
+    }
     h1 {
-        font-size: 28px;
+        font-size: 29px;
         font-weight: 600;
         color: #000000;
         line-height: 1.5;
     }
 
     h2 {
-        font-size: 35px;
+        font-size: 25px;
         font-weight: 600;
         color: #000000;
     }
-
+h3{
+    color: #000000;
+    font-weight: 600;
+    font-size: 18px;
+}
     h5 {
         font-size: 24px;
         color: #333333;
@@ -31,7 +38,7 @@ body {
         color: #46AAA8;
     }
     p{
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 400;
         color: #556575;
         img{
@@ -98,7 +105,7 @@ body {
 // ============== Banner Start ==============
 #banner{
     .bannerLeft{
-        margin-left: 9rem;
+        margin-left: 5rem;
         .banner-description{
             color: #000000;
         }
@@ -131,8 +138,99 @@ body {
         font-weight: 400;
     }
     .bannerRight{
-        margin-left: 2rem;
+        margin-left: 6rem;
     }
 }
 
 // ============== Banner End ==============
+
+// ===============featuredIn Start===========
+
+#featuredIn{
+    .featured{
+        // margin: 0 auto;
+        h5{
+            color: #556575;
+            font-size: 18px;
+        }
+    }
+    .feturedImg{
+        margin: 0 auto;
+        img{
+            width: 190px;
+        }
+    }
+}
+
+
+// ===============featuredIn End===========
+
+// ===============premeumWork Start===========
+
+#premeumWork{
+    .card-deck{
+        .card{
+            border: none;
+            h3{
+                font-size: 14px;
+            }
+            p{
+                font-size: 14px;
+                text-align: center;
+            }
+        }
+    }
+}
+
+// ===============premeumWork End===========
+
+// ===============Our Program Start=========
+#ourProgram{
+    .programElement{
+        margin: 0 auto;
+        width: 75%;
+    }
+    .element-separator{
+        width: 47.5%;
+        background: #344B66;
+        h5{
+            font-size: 20px;
+            color: #fff;
+        }
+        
+    }
+    .techwayRight{
+        position: relative;
+    }
+    .playBtn{
+        height: 100px;
+        width: 100px;
+        background: rgba(255, 255, 255,.5);
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        cursor: pointer;
+        i{
+            color: #46AAA8;
+            font-size: 45px;
+            line-height: 100px;
+        }
+}
+.techwayLeft{
+    h2{
+        line-height: 1.5;
+    }
+}
+}
+// ===============Our Program End===========
+
