--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -234,3 +234,30 @@ h3{
 }
 // ===============Our Program End===========
 
+// ===============successStory Start===========
+
+#successStory{
+    .story{
+        font-size: 18px;
+        color: #556575;
+    }
+    .story::before{
+    content: "";
+  background: url('../images/success-stories-bg.png');
+  background-repeat: no-repeat;
+  opacity: 0.1;
+  top: -10%;
+  left: 3.2%;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+    }
+
+    .stufBrif{
+        color: #161616;
+    }
+}
+
+// ===============successStory End===========
+
