--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -304,6 +304,18 @@ h3{
             border-left: 5px solid #15BA8B;
         }
     }
+    .employDownRight{
+        ul{
+            li{
+                font-size: 14px;
+                line-height: 2;
+                img{
+                    height: 15px;
+                }
+            }
+        }
+    }
 }
+
 // ===============Empolye End===========/
 
