--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -283,6 +283,9 @@ h3{
 
 // ===============Empolye Start===========/
 #employmentMarket{
+    h2{
+        line-height: 1.7;
+    }
     .eployLeft{
         // background: red;
         box-shadow: 0px 0px 10px #dbdbdb;
@@ -305,16 +308,22 @@ h3{
         }
     }
     .employDownRight{
+        p{
+            font-size: 15px;
+        }
         ul{
-            li{
-                font-size: 14px;
+            div{
+                li{
+                font-size: 13.5px;
                 line-height: 2;
+            }
                 img{
-                    height: 15px;
+                    height: 14px;
                 }
             }
         }
     }
+    
 }
 
 // ===============Empolye End===========/
